WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111970
[EFL][GTK][WKTR] Regression(
r145231
): Undefined symbol in libTestRunnerInjectedBundle.so
https://bugs.webkit.org/show_bug.cgi?id=111970
Summary
[EFL][GTK][WKTR] Regression(r145231): Undefined symbol in libTestRunnerInject...
Chris Dumez
Reported
2013-03-11 03:35:17 PDT
After
r145231
, The EFL and GTK WK2 bots stopped working due to an undefined symbol in libTestRunnerInjectedBundle.so: AccessibilityUIElement::supportedActions()
Attachments
Patch
(1.45 KB, patch)
2013-03-11 03:38 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2013-03-11 03:38:17 PDT
Created
attachment 192434
[details]
Patch
WebKit Review Bot
Comment 2
2013-03-11 07:21:41 PDT
Comment on
attachment 192434
[details]
Patch Clearing flags on attachment: 192434 Committed
r145361
: <
http://trac.webkit.org/changeset/145361
>
WebKit Review Bot
Comment 3
2013-03-11 07:21:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug